# telegram_bot

./: .gitignore  LICENSE  README.md  env.example  main.py  pyproject.toml
src/: audio.py  config.py  handlers.py  keyboards.py  text.py  translation.py  utils.py
